--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Reservia</title>
   <link rel="stylesheet" href="style/style.css">
-  <script src="https://kit.fontawesome.com/406da18a0b.js" crossorigin="anonymous" defer ></script>
+  <script src="https://kit.fontawesome.com/406da18a0b.js"></script>
 </head>
 <body>
 
