--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Reservia</title>
-  <link rel="stylesheet" href="style/style.css">
+  <!-- <link rel="stylesheet"<link rel="stylesheet" href="style/tablette.css"> href="style/style.css"><link rel="stylesheet" media="screen and (max-width: 600px)" href="style/mobile.css"> -->
+  <link rel="stylesheet" media="screen" href="style/desktop.css">
+  <link rel="stylesheet" media="screen and (min-width: 651px) and (max-width: 1200px)" href="style/tablette.css">
+  <link rel="stylesheet" media="screen and (max-width: 650px)" href="style/mobile.css">
+
+
   <script src="https://kit.fontawesome.com/406da18a0b.js"></script>
 </head>
 <body>
