--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Reservia</title>
   <!-- <link rel="stylesheet"<link rel="stylesheet" href="style/tablette.css"> href="style/style.css"><link rel="stylesheet" media="screen and (max-width: 600px)" href="style/mobile.css"> -->
-  <link rel="stylesheet" media="screen" href="style/desktop.css">
+  <link rel="stylesheet" media="screen and (min-width: 1201px)"  href="style/desktop.css">
   <link rel="stylesheet" media="screen and (min-width: 651px) and (max-width: 1200px)" href="style/tablette.css">
   <link rel="stylesheet" media="screen and (max-width: 650px)" href="style/mobile.css">
 
@@ -87,6 +87,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Auberge la Cannebière</h3>
@@ -108,6 +109,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Hôtel du port</h3>
@@ -129,6 +131,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Hôtel Les mouettes</h3>
@@ -150,6 +153,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Auberge de la mer</h3>
@@ -171,6 +175,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Auberge Le Panier</h3>
@@ -192,6 +197,7 @@
               <img
                       class="hebergementMainCardFigureImg"
                       src="./img/hebergement/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                      alt="heb."
               >
               <figcaption class="hebergementMainCardFigureCaption">
                 <h3 class="hebergementMainCardFigureCaptionTitle">Hôtel chez Amina</h3>
@@ -218,6 +224,7 @@
               <img
                       class="hebergementPopularWrapcontentWrapimgImg"
                       src="./img/hebergement/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                      alt="hebPop."
               >
             </div>
             <div class="hebergementPopularWrapcontentContent">
@@ -240,6 +247,7 @@
               <img
                       class="hebergementPopularWrapcontentWrapimgImg"
                       src="./img/hebergement/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                      alt="hebPop."
               >
             </div>
             <div class="hebergementPopularWrapcontentContent">
@@ -262,6 +270,7 @@
               <img
                       class="hebergementPopularWrapcontentWrapimgImg"
                       src="./img/hebergement/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                      alt="hebPop."
               >
             </div>
             <div class="hebergementPopularWrapcontentContent">
@@ -291,7 +300,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                  alt="Un port de plaisance remplis de bateau en premier plan avec une ville dans le second plan"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Vieux Port</h3>
@@ -301,7 +310,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                  alt="Desert rocailleux beige avec un fort elle aussi beige un peu plus loin dans l'image"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Fort de Pomègues</h3>
@@ -311,7 +320,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                  alt="Paysage mélengeant roche et verdure en premier plan et une grande mer bleu en second plan"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Parc National des Calanques</h3>
@@ -321,7 +330,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                  alt="Grande ville assez plate mais doté d'une colline qui mets en valeur un bâtiment, certainement religieux"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Notre-Dame-de-la-Garde</h3>
@@ -331,7 +340,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                  alt="Longue vue sur terre en premier plan, mer en second plan et ile en troisième plan"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Île du Frioul</h3>
@@ -341,7 +350,7 @@
           <img
                   class="activiteCardWrapimgImg"
                   src="./img/activite/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                  alt="Majestueux batiment au pierres blanches dôté d'une fontaine, tout autant majestueuse"
+                  alt="act"
           >
         </div>
         <h3 class="activiteCardTitle">Parc Longchamp</h3>
