--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <input class="searchFormSearchinput" type="search" placeholder="Marseille, France" size="1">
         <button class="searchFormSubmitinput">
           <span class="searchFormSubmitinputText">Rechercher</span>
+          <i class="searchFormSubmitinputIcon fas fa-search"></i>
         </button>
       </form>
       <div class="searchFilters">
